fixed page overflow issues

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -100,12 +100,13 @@ html, body{
   font-family: 'Cinzel', serif;
 }
 
-.container-fluid{
-  height: 100%;
+#slideshow{
+  width:100%;
+  overflow: hidden;
 }
 
 .home-bg{
-  width:100%;
+  width:calc(100% - 15px);
   height:100%;
   position: absolute;
 }
@@ -128,8 +129,9 @@ html, body{
 
 .navigation{
   background: #000000;
-  position: relative;
+  position: absolute;
   bottom: 100px;
+  width:100%;
   z-index: 11;
   .social{
     i{
@@ -145,6 +147,7 @@ ul{
     a{
       color:#ffffff;
       text-decoration: none;
+      font-size: 17px;
       &:hover{
        text-decoration: none;
         color:#cccccc;
@@ -163,15 +166,10 @@ ul{
   width: 90%;
   margin: 0 auto;
   display: block;
-  left:50%;
   top: 30px;
-
-  div{
-    left: -50%;
-    position: relative;
-    background: rgba(255, 255, 255, 0.8);
-    padding: 50px 19% 130px;
-  }
+  background: rgba(255, 255, 255, 0.8);
+  padding: 50px 19% 130px;
+  left:5%;
 }
 
 
@@ -370,6 +368,8 @@ ul{
 
 @media (max-width:991px) {
   .navigation {
+    bottom: unset;
+
     ul li{
       display: block;
     }
